- fixes text alignment on v-button and v-upload with a preset width that is larger then the default

--- a/material-addon/src/main/webapp/VAADIN/themes/material/components/v-button.scss
+++ b/material-addon/src/main/webapp/VAADIN/themes/material/components/v-button.scss
@@ -93,6 +93,7 @@ body:not(.v-touch) .v-button.borderless.custom:hover {
         padding: 0 20px;
         border-radius: $v-border-radius;
         outline: none;
+        text-align: center;
     }
     :not(.v-upload) > * > .v-button {
         height: $v-unit-size;
