--- a/material-addon/src/main/webapp/VAADIN/themes/material/components/v-upload.scss
+++ b/material-addon/src/main/webapp/VAADIN/themes/material/components/v-upload.scss
@@ -94,6 +94,7 @@
          height: $v-unit-size;
          border-radius: $v-border-radius;
          outline: none;
+         text-align: center;
      }
      .v-upload-immediate .v-button {
          line-height: $v-unit-size;
